[package]
name = "sdproxy"
version = "2.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
once_cell = "1.19"

[[bin]]
name = "sdproxy"
path = "src/main.rs"
